# circuit-tracer

./: README.md  pyproject.toml
circuit_tracer/: graph.py
circuit_tracer/frontend/assets/attribution_graph/: util-cg.js
circuit_tracer/transcoder/: single_layer_transcoder.py
circuit_tracer/utils/: create_graph_files.py
demos/: intervention_demo.ipynb
