[tool.poetry]
name = "circuit-tracer"
version = "0.1.0"
description = "Library for circuit tracing in language models"
authors = ["Original Author <you@example.com>"]
readme = "README.md"
license = "MIT"  # optional, pick appropriate license
homepage = ""    # optional
repository = "https://github.com/safety-research/circuit-tracer"  # optional
documentation = ""  # optional
keywords = ["circuit", "tracing", "ML", "language-models"]  # optional
python = ">=3.10"

[tool.poetry.dependencies]
python = ">=3.10"
einops = ">=0.8.0"
huggingface_hub = ">=0.26.0"
ipykernel = ">=6.29.5"
ipywidgets = ">=8.1.7"
numpy = ">=1.24.0"
pydantic = ">=2.0.0"
safetensors = ">=0.5.0"
tokenizers = ">=0.21.0"
torch = ">=2.0.0"
tqdm = ">=4.60.0"
transformer-lens = "v2.16.0"
transformers = ">=4.50.0"

[tool.poetry.extras]
dev = ["pytest>=8.0.0", "ruff>=0.12.7", "pyright>=1.1.403", "ipython>=8.37.0"]

[tool.poetry.scripts]
circuit-tracer = "circuit_tracer.__main__:main"
